--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# serverless
+.serverless/
+/layers/general/nodejs/node_modules/
