--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.2",
+    "source-map-support": "^0.5.19",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "eslint-plugin-import": "^2.22.0",
     "jest": "26.4.0",
     "prettier": "^2.0.5",
+    "serverless-plugin-layer-manager": "^1.0.5",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
     "ts-loader": "^8.0.2",
