--- a/layers/general/nodejs/package.json
+++ b/layers/general/nodejs/package.json
@@ -9,6 +9,7 @@
     "@nestjs/platform-express": "^7.4.2",
     "@nestjs/typeorm": "^7.1.0",
     "apollo-server-express": "^2.16.1",
+    "aws-serverless-express": "^3.3.8",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.0.18",
     "pg": "^8.3.0",
